# trainax

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: callbacks.md  dataloaders.md  file_handler.md  trainers.md  types.md
docs/concepts/: architecture.md  callbacks.md  sharding.md  step_functions.md
docs/getting-started/: installation.md  quickstart_eqx.md  quickstart_nnx.md
docs/tutorials/: custom_callbacks.ipynb  data_sharding.ipynb  eqx_regression.ipynb  eqx_stateful.ipynb  nnx_mnist.ipynb
notebooks/: eqx_example.ipynb  nnx_mnist_example.ipynb  train_small_models.py  trainer_test.py
src/trainax/: __init__.py  _callbacks.py  _dataloader.py  _file_handler.py  _trainer.py  _types.py
tests/: test_callbacks.py  test_dataloader.py  test_file_handler.py  test_loader.py  test_trainer.py  test_trainer_eqx.py  test_trainer_nnx.py
